--- a/bookshop/package.json
+++ b/bookshop/package.json
@@ -14,6 +14,7 @@
     "sqlite3": "^5.1.6"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "deploy2sqlite": "cds deploy --to sqlite:my.sqlite"
   }
 }
