--- a/cpapp/package.json
+++ b/cpapp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cpapp",
   "version": "1.0.0",
-  "description": "My sefl execution of CAP Risk Management Application",
+  "description": "A simple CAP project.",
   "repository": "<Add your repository here>",
   "license": "UNLICENSED",
   "private": true,
@@ -10,14 +10,9 @@
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1",
-    "@sap/ux-specification": "^1.108.17"
+    "@cap-js/sqlite": "^1"
   },
   "scripts": {
-    "start": "cds-serve",
-    "watch-risks": "cds watch --open risks/webapp/index.html?sap-ui-xx-viewCache=false"
-  },
-  "sapux": [
-    "app/risks"
-  ]
+    "start": "cds-serve"
+  }
 }
