--- a/cpapp/package.json
+++ b/cpapp/package.json
@@ -2,7 +2,7 @@
   "name": "cpapp",
   "version": "1.0.0",
   "description": "A simple CAP project.",
-  "repository": "<Add your repository here>",
+  "repository": "https://github.com/lambavikas/cap-nodejs.git",
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
