Added navigation targets for Risk and Mitigation UI's in their manifest.json files

--- a/cpapp/app/risks/webapp/manifest.json
+++ b/cpapp/app/risks/webapp/manifest.json
@@ -15,123 +15,134 @@
       "version": "1.11.3",
       "toolsId": "6cbc4681-00f7-43d1-9e48-6bb970201cd6"
     },
-    "dataSources": {
-      "mainService": {
-        "uri": "/odata/v4/api/risk/",
-        "type": "OData",
-        "settings": {
-          "annotations": [],
-          "localUri": "localService/metadata.xml",
-          "odataVersion": "4.0"
-        }
-      }
-    }
-  },
-  "sap.ui": {
-    "technology": "UI5",
-    "icons": {
-      "icon": "",
-      "favIcon": "",
-      "phone": "",
-      "phone@2": "",
-      "tablet": "",
-      "tablet@2": ""
-    },
-    "deviceTypes": {
-      "desktop": true,
-      "tablet": true,
-      "phone": true
-    }
-  },
-  "sap.ui5": {
-    "flexEnabled": true,
-    "dependencies": {
-      "minUI5Version": "1.120.4",
-      "libs": {
-        "sap.m": {},
-        "sap.ui.core": {},
-        "sap.ushell": {},
-        "sap.fe.templates": {}
-      }
-    },
-    "contentDensities": {
-      "compact": true,
-      "cozy": true
-    },
-    "models": {
-      "i18n": {
-        "type": "sap.ui.model.resource.ResourceModel",
-        "settings": {
-          "bundleName": "ns.risks.i18n.i18n"
+    "crossNavigation": {
+      "inbounds": {
+        "Risks-display": {
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          },
+          "semanticObject": "Risks",
+          "action": "display"
         }
       },
-      "": {
-        "dataSource": "mainService",
-        "preload": true,
-        "settings": {
-          "synchronizationMode": "None",
-          "operationMode": "Server",
-          "autoExpandSelect": true,
-          "earlyRequests": true
+      "dataSources": {
+        "mainService": {
+          "uri": "/odata/v4/api/risk/",
+          "type": "OData",
+          "settings": {
+            "annotations": [],
+            "localUri": "localService/metadata.xml",
+            "odataVersion": "4.0"
+          }
         }
-      },
-      "@i18n": {
-        "type": "sap.ui.model.resource.ResourceModel",
-        "uri": "i18n/i18n.properties"
       }
     },
-    "resources": {
-      "css": []
+    "sap.ui": {
+      "technology": "UI5",
+      "icons": {
+        "icon": "",
+        "favIcon": "",
+        "phone": "",
+        "phone@2": "",
+        "tablet": "",
+        "tablet@2": ""
+      },
+      "deviceTypes": {
+        "desktop": true,
+        "tablet": true,
+        "phone": true
+      }
     },
-    "routing": {
-      "config": {},
-      "routes": [
-        {
-          "pattern": ":?query:",
-          "name": "RisksList",
-          "target": "RisksList"
+    "sap.ui5": {
+      "flexEnabled": true,
+      "dependencies": {
+        "minUI5Version": "1.120.4",
+        "libs": {
+          "sap.m": {},
+          "sap.ui.core": {},
+          "sap.ushell": {},
+          "sap.fe.templates": {}
+        }
+      },
+      "contentDensities": {
+        "compact": true,
+        "cozy": true
+      },
+      "models": {
+        "i18n": {
+          "type": "sap.ui.model.resource.ResourceModel",
+          "settings": {
+            "bundleName": "ns.risks.i18n.i18n"
+          }
         },
-        {
-          "pattern": "Risks({key}):?query:",
-          "name": "RisksObjectPage",
-          "target": "RisksObjectPage"
+        "": {
+          "dataSource": "mainService",
+          "preload": true,
+          "settings": {
+            "synchronizationMode": "None",
+            "operationMode": "Server",
+            "autoExpandSelect": true,
+            "earlyRequests": true
+          }
+        },
+        "@i18n": {
+          "type": "sap.ui.model.resource.ResourceModel",
+          "uri": "i18n/i18n.properties"
         }
-      ],
-      "targets": {
-        "RisksList": {
-          "type": "Component",
-          "id": "RisksList",
-          "name": "sap.fe.templates.ListReport",
-          "options": {
-            "settings": {
-              "contextPath": "/Risks",
-              "variantManagement": "Page",
-              "navigation": {
-                "Risks": {
-                  "detail": {
-                    "route": "RisksObjectPage"
+      },
+      "resources": {
+        "css": []
+      },
+      "routing": {
+        "config": {},
+        "routes": [
+          {
+            "pattern": ":?query:",
+            "name": "RisksList",
+            "target": "RisksList"
+          },
+          {
+            "pattern": "Risks({key}):?query:",
+            "name": "RisksObjectPage",
+            "target": "RisksObjectPage"
+          }
+        ],
+        "targets": {
+          "RisksList": {
+            "type": "Component",
+            "id": "RisksList",
+            "name": "sap.fe.templates.ListReport",
+            "options": {
+              "settings": {
+                "contextPath": "/Risks",
+                "variantManagement": "Page",
+                "navigation": {
+                  "Risks": {
+                    "detail": {
+                      "route": "RisksObjectPage"
+                    }
                   }
                 }
               }
             }
-          }
-        },
-        "RisksObjectPage": {
-          "type": "Component",
-          "id": "RisksObjectPage",
-          "name": "sap.fe.templates.ObjectPage",
-          "options": {
-            "settings": {
-              "editableHeaderContent": true,
-              "contextPath": "/Risks"
+          },
+          "RisksObjectPage": {
+            "type": "Component",
+            "id": "RisksObjectPage",
+            "name": "sap.fe.templates.ObjectPage",
+            "options": {
+              "settings": {
+                "editableHeaderContent": true,
+                "contextPath": "/Risks"
+              }
             }
           }
         }
       }
+    },
+    "sap.fiori": {
+      "registrationIds": [],
+      "archeType": "transactional"
     }
-  },
-  "sap.fiori": {
-    "registrationIds": [],
-    "archeType": "transactional"
   }
-}
