--- a/cpapp/app/mitigations/webapp/manifest.json
+++ b/cpapp/app/mitigations/webapp/manifest.json
@@ -15,132 +15,143 @@
       "version": "1.11.3",
       "toolsId": "ee886a64-307c-4280-898c-28193ab92211"
     },
-    "dataSources": {
-      "mainService": {
-        "uri": "/odata/v4/api/risk/",
-        "type": "OData",
-        "settings": {
-          "annotations": [],
-          "localUri": "localService/metadata.xml",
-          "odataVersion": "4.0"
-        }
-      }
-    }
-  },
-  "sap.ui": {
-    "technology": "UI5",
-    "icons": {
-      "icon": "",
-      "favIcon": "",
-      "phone": "",
-      "phone@2": "",
-      "tablet": "",
-      "tablet@2": ""
-    },
-    "deviceTypes": {
-      "desktop": true,
-      "tablet": true,
-      "phone": true
-    }
-  },
-  "sap.ui5": {
-    "flexEnabled": true,
-    "dependencies": {
-      "minUI5Version": "1.120.4",
-      "libs": {
-        "sap.m": {},
-        "sap.ui.core": {},
-        "sap.f": {},
-        "sap.suite.ui.generic.template": {},
-        "sap.ui.comp": {},
-        "sap.ui.generic.app": {},
-        "sap.ui.table": {},
-        "sap.ushell": {}
-      }
-    },
-    "contentDensities": {
-      "compact": true,
-      "cozy": true
-    },
-    "models": {
-      "i18n": {
-        "type": "sap.ui.model.resource.ResourceModel",
-        "settings": {
-          "bundleName": "ns.mitigations.i18n.i18n"
+    "crossNavigation": {
+      "inbounds": {
+        "Mitigations-display": {
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          },
+          "semanticObject": "Mitigations",
+          "action": "display"
         }
       },
-      "": {
-        "dataSource": "mainService",
-        "preload": true,
-        "settings": {
-          "synchronizationMode": "None",
-          "operationMode": "Server",
-          "autoExpandSelect": true,
-          "earlyRequests": true
+      "dataSources": {
+        "mainService": {
+          "uri": "/odata/v4/api/risk/",
+          "type": "OData",
+          "settings": {
+            "annotations": [],
+            "localUri": "localService/metadata.xml",
+            "odataVersion": "4.0"
+          }
         }
       }
     },
-    "resources": {
-      "css": []
-    },
-    "routing": {
-      "config": {
-        "routerClass": "sap.m.routing.Router",
-        "viewType": "XML",
-        "viewPath": "ns.mitigations.view",
-        "controlId": "app",
-        "controlAggregation": "pages",
-        "bypassed": {
-          "target": [
-            "notFound"
-          ]
-        },
-        "async": true
+    "sap.ui": {
+      "technology": "UI5",
+      "icons": {
+        "icon": "",
+        "favIcon": "",
+        "phone": "",
+        "phone@2": "",
+        "tablet": "",
+        "tablet@2": ""
       },
-      "routes": [
-        {
-          "pattern": "",
-          "name": "worklist",
-          "target": [
-            "worklist"
-          ]
-        },
-        {
-          "pattern": "Mitigations/{objectId}",
-          "name": "object",
-          "target": [
-            "object"
-          ]
-        }
-      ],
-      "targets": {
-        "worklist": {
-          "viewName": "Worklist",
-          "viewId": "worklist",
-          "viewLevel": 1,
-          "title": "{i18n>worklistViewTitle}"
-        },
-        "object": {
-          "viewName": "Object",
-          "viewId": "object",
-          "viewLevel": 2,
-          "title": "{i18n>objectViewTitle}"
-        },
-        "objectNotFound": {
-          "viewName": "ObjectNotFound",
-          "viewId": "objectNotFound"
-        },
-        "notFound": {
-          "viewName": "NotFound",
-          "viewId": "notFound"
-        }
+      "deviceTypes": {
+        "desktop": true,
+        "tablet": true,
+        "phone": true
       }
     },
-    "rootView": {
-      "viewName": "ns.mitigations.view.App",
-      "type": "XML",
-      "async": true,
-      "id": "app"
+    "sap.ui5": {
+      "flexEnabled": true,
+      "dependencies": {
+        "minUI5Version": "1.120.4",
+        "libs": {
+          "sap.m": {},
+          "sap.ui.core": {},
+          "sap.f": {},
+          "sap.suite.ui.generic.template": {},
+          "sap.ui.comp": {},
+          "sap.ui.generic.app": {},
+          "sap.ui.table": {},
+          "sap.ushell": {}
+        }
+      },
+      "contentDensities": {
+        "compact": true,
+        "cozy": true
+      },
+      "models": {
+        "i18n": {
+          "type": "sap.ui.model.resource.ResourceModel",
+          "settings": {
+            "bundleName": "ns.mitigations.i18n.i18n"
+          }
+        },
+        "": {
+          "dataSource": "mainService",
+          "preload": true,
+          "settings": {
+            "synchronizationMode": "None",
+            "operationMode": "Server",
+            "autoExpandSelect": true,
+            "earlyRequests": true
+          }
+        }
+      },
+      "resources": {
+        "css": []
+      },
+      "routing": {
+        "config": {
+          "routerClass": "sap.m.routing.Router",
+          "viewType": "XML",
+          "viewPath": "ns.mitigations.view",
+          "controlId": "app",
+          "controlAggregation": "pages",
+          "bypassed": {
+            "target": [
+              "notFound"
+            ]
+          },
+          "async": true
+        },
+        "routes": [
+          {
+            "pattern": "",
+            "name": "worklist",
+            "target": [
+              "worklist"
+            ]
+          },
+          {
+            "pattern": "Mitigations/{objectId}",
+            "name": "object",
+            "target": [
+              "object"
+            ]
+          }
+        ],
+        "targets": {
+          "worklist": {
+            "viewName": "Worklist",
+            "viewId": "worklist",
+            "viewLevel": 1,
+            "title": "{i18n>worklistViewTitle}"
+          },
+          "object": {
+            "viewName": "Object",
+            "viewId": "object",
+            "viewLevel": 2,
+            "title": "{i18n>objectViewTitle}"
+          },
+          "objectNotFound": {
+            "viewName": "ObjectNotFound",
+            "viewId": "objectNotFound"
+          },
+          "notFound": {
+            "viewName": "NotFound",
+            "viewId": "notFound"
+          }
+        }
+      },
+      "rootView": {
+        "viewName": "ns.mitigations.view.App",
+        "type": "XML",
+        "async": true,
+        "id": "app"
+      }
     }
   }
-}
