--- a/cpapp/app/risks/webapp/manifest.json
+++ b/cpapp/app/risks/webapp/manifest.json
@@ -1,148 +1,157 @@
 {
-  "_version": "1.58.0",
-  "sap.app": {
-    "id": "ns.risks",
-    "type": "application",
-    "i18n": "i18n/i18n.properties",
-    "applicationVersion": {
-      "version": "0.0.1"
-    },
-    "title": "{{appTitle}}",
-    "description": "{{appDescription}}",
-    "resources": "resources.json",
-    "sourceTemplate": {
-      "id": "@sap/generator-fiori:lrop",
-      "version": "1.11.3",
-      "toolsId": "6cbc4681-00f7-43d1-9e48-6bb970201cd6"
-    },
-    "crossNavigation": {
-      "inbounds": {
-        "Risks-display": {
-          "signature": {
-            "parameters": {},
-            "additionalParameters": "allowed"
-          },
-          "semanticObject": "Risks",
-          "action": "display"
-        }
-      },
-      "dataSources": {
-        "mainService": {
-          "uri": "/odata/v4/api/risk/",
-          "type": "OData",
-          "settings": {
-            "annotations": [],
-            "localUri": "localService/metadata.xml",
-            "odataVersion": "4.0"
-          }
-        }
-      }
-    },
-    "sap.ui": {
-      "technology": "UI5",
-      "icons": {
-        "icon": "",
-        "favIcon": "",
-        "phone": "",
-        "phone@2": "",
-        "tablet": "",
-        "tablet@2": ""
-      },
-      "deviceTypes": {
-        "desktop": true,
-        "tablet": true,
-        "phone": true
-      }
-    },
-    "sap.ui5": {
-      "flexEnabled": true,
-      "dependencies": {
-        "minUI5Version": "1.120.4",
-        "libs": {
-          "sap.m": {},
-          "sap.ui.core": {},
-          "sap.ushell": {},
-          "sap.fe.templates": {}
-        }
-      },
-      "contentDensities": {
-        "compact": true,
-        "cozy": true
-      },
-      "models": {
-        "i18n": {
-          "type": "sap.ui.model.resource.ResourceModel",
-          "settings": {
-            "bundleName": "ns.risks.i18n.i18n"
-          }
+    "_version": "1.58.0",
+    "sap.app": {
+        "id": "ns.risks",
+        "type": "application",
+        "i18n": "i18n/i18n.properties",
+        "applicationVersion": {
+            "version": "0.0.1"
         },
-        "": {
-          "dataSource": "mainService",
-          "preload": true,
-          "settings": {
-            "synchronizationMode": "None",
-            "operationMode": "Server",
-            "autoExpandSelect": true,
-            "earlyRequests": true
-          }
+        "title": "{{appTitle}}",
+        "description": "{{appDescription}}",
+        "resources": "resources.json",
+        "sourceTemplate": {
+            "id": "@sap/generator-fiori:lrop",
+            "version": "1.11.3",
+            "toolsId": "6cbc4681-00f7-43d1-9e48-6bb970201cd6"
         },
-        "@i18n": {
-          "type": "sap.ui.model.resource.ResourceModel",
-          "uri": "i18n/i18n.properties"
-        }
-      },
-      "resources": {
-        "css": []
-      },
-      "routing": {
-        "config": {},
-        "routes": [
-          {
-            "pattern": ":?query:",
-            "name": "RisksList",
-            "target": "RisksList"
-          },
-          {
-            "pattern": "Risks({key}):?query:",
-            "name": "RisksObjectPage",
-            "target": "RisksObjectPage"
-          }
-        ],
-        "targets": {
-          "RisksList": {
-            "type": "Component",
-            "id": "RisksList",
-            "name": "sap.fe.templates.ListReport",
-            "options": {
-              "settings": {
-                "contextPath": "/Risks",
-                "variantManagement": "Page",
-                "navigation": {
-                  "Risks": {
-                    "detail": {
-                      "route": "RisksObjectPage"
-                    }
-                  }
+        "crossNavigation": {
+            "inbounds": {
+                "Risks-display": {
+                    "signature": {
+                        "parameters": {},
+                        "additionalParameters": "allowed"
+                    },
+                    "semanticObject": "Risks",
+                    "action": "display"
                 }
-              }
+            },
+            "dataSources": {
+                "mainService": {
+                    "uri": "/odata/v4/api/risk/",
+                    "type": "OData",
+                    "settings": {
+                        "annotations": [],
+                        "localUri": "localService/metadata.xml",
+                        "odataVersion": "4.0"
+                    }
+                }
             }
-          },
-          "RisksObjectPage": {
-            "type": "Component",
-            "id": "RisksObjectPage",
-            "name": "sap.fe.templates.ObjectPage",
-            "options": {
-              "settings": {
-                "editableHeaderContent": true,
-                "contextPath": "/Risks"
-              }
+        },
+        "sap.ui": {
+            "technology": "UI5",
+            "icons": {
+                "icon": "",
+                "favIcon": "",
+                "phone": "",
+                "phone@2": "",
+                "tablet": "",
+                "tablet@2": ""
+            },
+            "deviceTypes": {
+                "desktop": true,
+                "tablet": true,
+                "phone": true
             }
-          }
+        },
+        "sap.ui5": {
+            "flexEnabled": true,
+            "dependencies": {
+                "minUI5Version": "1.120.4",
+                "libs": {
+                    "sap.m": {},
+                    "sap.ui.core": {},
+                    "sap.ushell": {},
+                    "sap.fe.templates": {}
+                }
+            },
+            "contentDensities": {
+                "compact": true,
+                "cozy": true
+            },
+            "models": {
+                "i18n": {
+                    "type": "sap.ui.model.resource.ResourceModel",
+                    "settings": {
+                        "bundleName": "ns.risks.i18n.i18n"
+                    }
+                },
+                "": {
+                    "dataSource": "mainService",
+                    "preload": true,
+                    "settings": {
+                        "synchronizationMode": "None",
+                        "operationMode": "Server",
+                        "autoExpandSelect": true,
+                        "earlyRequests": true
+                    }
+                },
+                "@i18n": {
+                    "type": "sap.ui.model.resource.ResourceModel",
+                    "uri": "i18n/i18n.properties"
+                }
+            },
+            "resources": {
+                "css": []
+            },
+            "routing": {
+                "config": {},
+                "routes": [
+                    {
+                        "pattern": ":?query:",
+                        "name": "RisksList",
+                        "target": "RisksList"
+                    },
+                    {
+                        "pattern": "Risks({key}):?query:",
+                        "name": "RisksObjectPage",
+                        "target": "RisksObjectPage"
+                    }
+                ],
+                "targets": {
+                    "RisksList": {
+                        "type": "Component",
+                        "id": "RisksList",
+                        "name": "sap.fe.templates.ListReport",
+                        "options": {
+                            "settings": {
+                                "contextPath": "/Risks",
+                                "variantManagement": "Page",
+                                "navigation": {
+                                    "Risks": {
+                                        "detail": {
+                                            "route": "RisksObjectPage"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "RisksObjectPage": {
+                        "type": "Component",
+                        "id": "RisksObjectPage",
+                        "name": "sap.fe.templates.ObjectPage",
+                        "options": {
+                            "settings": {
+                                "editableHeaderContent": true,
+                                "contextPath": "/Risks"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "sap.fiori": {
+            "registrationIds": [],
+            "archeType": "transactional"
+        },
+        "sap.cloud": {
+            "public": true,
+            "service": "cpapp.service"
         }
-      }
     },
-    "sap.fiori": {
-      "registrationIds": [],
-      "archeType": "transactional"
+    "sap.cloud": {
+        "public": true,
+        "service": "cpapp.service"
     }
-  }
+}
