Added a sample of a local AppRouter that serves static content of an HTML5 app deployed to HTML5 repo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@sap/cds": ">=7"
   },
   "workspaces": [
-    "./cpapp"
+    "./cpapp",
+    "./approuter-samples/sample1",
+    "./approuter-samples/sample2"
   ],
   "devDependencies": {
     "@sap/cds-dk": "^7",
@@ -17,7 +19,10 @@
     "cleanup": "rm -rf node_modules && rm -rf */node_modules && rm -rf */*/node_modules",
     "cpapp-run": "cds watch cpapp",
     "cpapp-build": "mbt build -s ./cpapp -t ./",
-    "cpapp-deploy": "cf deploy ./cpapp/cpapp_1.0.0.mtar"
+    "cpapp-deploy": "cf deploy ./cpapp/cpapp_1.0.0.mtar",
+    "approuter-sample1-deploy": "cd ./approuter-samples/sample1 && cf push approuter-sample1 --random-route",
+    "approuter-sample2-build": "cd ./approuter-samples/sample2 && mbt build",
+    "approuter-sample2-deploy": "cd ./approuter-samples/sample2 && cf deploy mta_archives/approuter-sample2_1.0.0.mtar"
   },
   "keywords": [],
   "author": "vikas.lamba@sap.com",
